fixed some small bugs in test data