@@ -31,7 +31,7 @@ public class DeveloperRC extends PersonRC {
      *            The id to set.
      */
     public void setId(BigDecimal id) {
-        this.id = new Long(id.longValue());
+        this.id = Long.valueOf(id.longValue());
     }
 
     /**
@@ -39,7 +39,7 @@ public class DeveloperRC extends PersonRC {
      *            The id to set.
      */
     public void setId(BigInteger id) {
-        this.id = new Long(id.longValue());
+        this.id = Long.valueOf(id.longValue());
     }
 
     /**
